@@ -1,5 +1,5 @@
 #
-# $Id: all.dem,v 1.68 2016/02/07 22:15:35 sfeam Exp $
+# $Id: all.dem,v 1.69 2016/04/24 22:03:05 sfeam Exp $
 #
 # Executes all demos (OK, MOST demos) in this directory.
 # This serves as a series of unit tests for non-interactive capabilities.
@@ -358,6 +358,7 @@ print "********************** nonlinear axis demos *********************"
 load "nonlinear1.dem"
 load "nonlinear2.dem"
 load "nonlinear3.dem"
+load "nonlinear4.dem"
 reset
 
 print "********************** file transparent.dem *********************"
