@@ -1,5 +1,12 @@
 2016-04-24  Ethan A Merritt  <merritt@u.washington.edu>
 
+	* src/axis.c src/color.c src/command.c src/mouse.c src/parse.c 
+	src/plot2d.c src/pm3d.c src/save.c src/unset.c demo/nonlinear4.dem:
+	Nonlinear axes parts 7 and 8
+	Handle nonlinear x2, y2 axes (2D) and cb axis (2D and 3D).
+
+2016-04-24  Ethan A Merritt  <merritt@u.washington.edu>
+
 	* src/axis.c src/axis.h src/set.c src/save.c:
 	Nonlinear axes part 4
 	New command "set tics logscale" lets the new nonlinear axis code use
